# chat-app-rust-react

./: .dockerignore  .gitignore  Cargo.toml  DEEPSEEK_SETUP.md  Dockerfile  README.md  chat.db
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
src/: main.rs
